NIFI-14796 Implemented PMD rules InefficientEmptyStringCheck, StringInstantiation, StringToString, UselessStringValueOf and UseStringBufferForStringAppends.