@@ -50,7 +50,7 @@ public class MiNiFiPropertiesLoader {
      * @see MiNiFiPropertiesLoader#load(File)
      */
     public NiFiProperties load(String path) {
-        if (path != null && !path.trim().isEmpty()) {
+        if (path != null && !path.isBlank()) {
             return load(new File(path));
         } else {
             return loadDefault();
